# esp32_motion_controller

./: .gitignore  CMakeLists.txt  sdkconfig
build.clang/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  cmake_install.cmake  config.env  flash_args  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  project_description.json  x509_crt_bundle.S
build.clang/bootloader/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  config.env  project_description.json
build.clang/esp-idf/: cmake_install.cmake
build.clang/gdbinit/: gdbinit  symbols
build.clang/log/: idf_py_stderr_output_84340  idf_py_stdout_output_134228  idf_py_stdout_output_134872  idf_py_stdout_output_136701  idf_py_stdout_output_142307  (+2 more)
components/hw_drivers/: CMakeLists.txt
components/hw_drivers/EncoderPCNT/: EncoderPCNT.cpp  EncoderPCNT.h
components/hw_drivers/LUTStore/: LUTStore.cpp  LUTStore.h
components/hw_drivers/MotorPWM/: MotorPWM.cpp  MotorPWM.h
components/hw_drivers/UWBDriver/: UWBDriver.cpp  UWBDriver.h
components/hw_drivers/WheelDriver/: WheelDriver.cpp  WheelDriver.h
components/hw_drivers/mpu9250/: Kconfig
components/hw_drivers/mpu9250/include/: common.h
components/tasks/: CMakeLists.txt  timer_hw.cpp  timer_hw.h  timer_task.cpp  timer_task.h  uart_deco.cpp  uart_deco.h  uart_echo.cpp
components/tasks/ControlTask/: ControlTask.cpp  ControlTask.h
components/tasks/EKFTask/: EKFTask.cpp  EKFTask.h
components/tasks/SensorMeasureTask/: SensorMeasureTask.cpp  SensorMeasureTask.h
components/tasks/TimerNotifyTask/: TimerNotifyTask.cpp  TimerNotifyTask.h
components/tasks/UARTCommandTask/: UARTCommandTask.cpp  UARTCommandTask.h
components/tasks/UWBMeasureTask/: UWBMeasureTask.cpp  UWBMeasureTask.h
components/tasks/UarttelemetryTask/: UarttelemetryTask.cpp  UarttelemetryTask.h
main/: CMakeLists.txt  Encoder.cpp  Encoder.h  HallEncoder.c  HallEncoder.cpp  LUTCorrection.cpp  LUTCorrection.h  MotorPWM.cpp  MotorPWM.h  PidController.cpp  PidController.h  hardware_config.h  main.cpp
tasks/: CMakeLists.txt  uart_echo.cpp  uart_echo.h
(+105 files in other folders)
