idf_component_register(
    SRCS
        "UARTCommandTask/UARTCommandTask.cpp"
        "ControlTask/ControlTask.cpp"
        "TimerNotifyTask/TimerNotifyTask.cpp"
        "SensorMeasureTask/SensorMeasureTask.cpp"
        "UWBMeasureTask/UWBMeasureTask.cpp"
        "EKFTask/EKFTask.cpp"
        "UarttelemetryTask/UarttelemetryTask.cpp"
    INCLUDE_DIRS
        "."
    REQUIRES
        esp_driver_uart
        hw_drivers
        data
)
